@@ -223,9 +223,7 @@ class TestSeqIterReversed(TestInvariantWithoutMutations):
         self.assertEqual(len(it), 0)
 
 
-
-if __name__ == "__main__":
-
+def test_main():
     unittests = [
         TestRepeat,
         TestXrange,
@@ -243,3 +241,6 @@ if __name__ == "__main__":
         TestSeqIterReversed,
     ]
     test_support.run_unittest(*unittests)
+
+if __name__ == "__main__":
+    test_main()
